update additional uses of deprecated newinstance